Adding new jumbotron photo

--- a/src/modules/Jumbotron.css
+++ b/src/modules/Jumbotron.css
@@ -2,7 +2,7 @@
 .jumbotron {
     text-align: center;
     background-color: #000;
-    background-image: url(../img/jumbotron-BG.jpg);
+    background-image: url(../img/jumbotron-BG-1.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
